[gd_scene load_steps=4 format=2]

[ext_resource path="res://font/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://util/ConfirmDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://levelup/menu_items/DeleteNodeMenuItem.gd" type="Script" id=3]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 290.0
margin_bottom = 40.0
rect_min_size = Vector2( 290, 0 )

[node name="DescriptionContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 290.0
margin_bottom = 23.0

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/DescriptionContainer"]
margin_right = 105.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "Destroy node"

[node name="ConfirmDialog" parent="HBoxContainer/DescriptionContainer" instance=ExtResource( 2 )]
margin_left = 109.0
margin_right = 132.0
margin_bottom = 23.0
